# stomp

./: .gitignore  README.md  stomp.rosinstall
stomp/: CMakeLists.txt  package.xml
stomp/include/stomp/: covariant_movement_primitive.h  stomp.h  stomp_utils.h  task.h
stomp/src/: chomp.cpp  covariant_movement_primitive.cpp  policy_improvement.cpp  stomp.cpp
stomp/test/: eigen_perf_test.cpp  stomp_2d_test.cpp  stomp_2d_test.h  stomp_2d_test.yaml  stomp_2d_test_plot.py  stomp_constrained.cpp  stomp_constrained_test.cpp  test_distributions.cpp
stomp_moveit_interface/: CMakeLists.txt  cost_feature_plugins.xml  package.xml  stomp_moveit_interface_plugin.xml
stomp_moveit_interface/config/pr2/: .stomp_planning.yaml.swp  stomp_planning.yaml
stomp_moveit_interface/include/stomp_moveit_interface/: feature_set.h  stomp_optimization_task.h  stomp_planner.h  stomp_trajectory.h
stomp_moveit_interface/include/stomp_moveit_interface/cost_features/: collision_feature.h  exact_collision_feature.h  stomp_cost_feature.h
stomp_moveit_interface/launch/pr2/: demo.launch  move_group.launch
stomp_moveit_interface/src/: feature_set.cpp  stomp_optimization_task.cpp  stomp_planner.cpp  stomp_trajectory.cpp
stomp_moveit_interface/src/cost_features/: collision_feature.cpp  exact_collision_feature.cpp  stomp_cost_feature.cpp
stomp_moveit_interface/test/: test_stomp_moveit_interface.cpp
stomp_pr2_description/: CMakeLists.txt  package.xml
stomp_pr2_description/robots/: pr2.urdf.xacro  upload_pr2.launch
stomp_pr2_description/urdf/base_v0/: .base.urdf.xacro.swp  base.urdf.xacro
stomp_ros_interface/: CMakeLists.txt
