<?xml version="1.0"?>
<package>
  <name>stomp_moveit_interface</name>
  <version>0.4.0</version>
  <description>STOMP for MoveIt!</description>
  <maintainer email="kalakris@usc.edu">Mrinal Kalakrishnan</maintainer>
  <author email="kalakris@usc.edu">Mrinal Kalakrishnan</author>
  <license>BSD</license>
  <url>https://github.com/kalakris/stomp</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>stomp</build_depend>
  <run_depend>stomp</run_depend>

</package>
